syntax = "proto3";

package schedule;

import "internal/app/subsystems/api/grpc/pb/promise_t.proto";
import "internal/app/subsystems/api/grpc/pb/schedule_t.proto";

option go_package = "github.com/resonatehq/resonate/internal/app/subsystems/api/grpc/pb";

service Schedules {
    rpc ReadSchedule (ReadScheduleRequest) returns (ReadScheduleResponse) {}
    rpc SearchSchedules (SearchSchedulesRequest) returns (SearchSchedulesResponse) {}
    rpc CreateSchedule (CreateScheduleRequest) returns (CreatedScheduleResponse) {}
    rpc DeleteSchedule (DeleteScheduleRequest) returns (DeleteScheduleResponse) {}
}

// CREATE

message CreateScheduleRequest {
    string id = 1;
    string description = 2;
    string cron = 3;
    map<string, string> tags = 4;
    string promiseId = 5;
    int64 promiseTimeout = 6;
    promise_t.Value promiseParam = 7;
    map<string, string> promiseTags = 8;
    string idempotencyKey = 9;
    string requestId = 10;
}

message CreatedScheduleResponse {
    bool noop = 1;
    schedule_t.Schedule schedule = 2;
}

// READ

message ReadScheduleRequest {
    string id = 1;
    string requestId = 2;
}

message ReadScheduleResponse {
    schedule_t.Schedule schedule = 1;
}

// SEARCH

message SearchSchedulesRequest {
    string id = 1;
    map<string, string> tags = 2;
    int32 limit = 3;
    string cursor = 4;
    string requestId = 5;
}

message SearchSchedulesResponse {
    repeated schedule_t.Schedule schedules = 1;
    string cursor = 2;
}

// DELETE

message DeleteScheduleRequest {
    string id = 1;
    string requestId = 2;
}

message DeleteScheduleResponse {}
