syntax = "proto3";

package schedule_t;

import "internal/app/subsystems/api/grpc/pb/promise_t.proto";

option go_package = "github.com/resonatehq/resonate/internal/app/subsystems/api/grpc/pb";

message Schedule {
    string id = 1;
    string description = 2;
    string cron = 3;
    map<string, string> tags = 4;
    string promiseId = 5;
    int64 promiseTimeout = 6;
    promise_t.Value promiseParam = 7;
    map<string, string> promiseTags = 8;
    string idempotencyKey = 9;
    int64 lastRunTime = 10;
    int64 nextRunTime = 11;
    int64 createdOn = 12;
}
